<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/returnButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="Return" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="Save" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:contentDescription="TODO"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>